# Cuda_Gemm_Practice

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cublas_test.cu  cublas_test.out  cutlas_test.out  gemm_ALL.cu  gemm_ALL.out  gemm_alter.cu  gemm_alter.out  gemm_v1.cu  gemm_v1.out  gemm_v1_alter.cu  gemm_v1_alter.ncu-rep  gemm_v1_alter.out  gemm_v1_alter_1.ncu-rep  gemm_v1_alter_1.out  gemm_v2.cu  gemm_v2.out  gemm_v3.cu  gemm_v3.out  gemm_v4.cu  gemm_v4.out  gemm_v5.cu  gemm_v5.out  gemm_v6.cu  gemm_v6.out  gemm_v6_alter.out  gemm_v7.cu  gemm_v7.out  gemm_v7_alter.cu  gemm_v7_alter.ncu-rep  gemm_v7_alter.out  gemm_v8.cu  gemm_v8.out  gemm_v8_alter.cu  gemm_v8_alter.ncu-rep  gemm_v8_alter.out  gemm_v9.cu  (+12 more)
